--- a/_data/carousels.yml
+++ b/_data/carousels.yml
@@ -1,4 +1,4 @@
-- video: video/carta1.mp4
+- video: video/carta-lowres.m4v
   captionhead: Optimizing Transit Operations
   text: We work with Chattanooga Regional Transit Authority and Nashville WeGo to enable efficient transit operations by using artifical intelligence and real-time data analysis at scale. This includes reinforcement learning,  monte-carlo tree search and operations research based optimization methods for system-wide integrated scheduling and dispatch of transit operations. As part of this work we are also developing models to estimate loading factors and real-time energy consumption of mixed vehicle transit fleets and use those models to predict and optimize operations for lowering overall energy impact while ensuring the system wide capacity remains unaffected. 
   active: true
