--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,15 +3,15 @@
 - title: Home
   url: /
   sublinks:
-    - title: About us
+    - title: About Us
       url: /#aboutus
-    - title: The team
+    - title: Team
       url: /#team
     - title: Research Areas
       url: /#research
     - title: Activities
       url: /#activities
-- title: "HDEMMA"
+- title: "HD-EMMA"
   url: /energy.html
 
 - title: "Publications"
