--- a/_data/carousels.yml
+++ b/_data/carousels.yml
@@ -1,28 +1,35 @@
 - video: /img/carta-lowres.m4v
   captionhead: Optimizing Transit Operations
-  text: We work with Chattanooga Regional Transit Authority and Nashville WeGo to enable efficient transit operations by using artifical intelligence and real-time data analysis at scale. This includes reinforcement learning,  monte-carlo tree search and operations research based optimization methods for system-wide integrated scheduling and dispatch of transit operations. As part of this work we are also developing models to estimate loading factors and real-time energy consumption of mixed vehicle transit fleets and use those models to predict and optimize operations for lowering overall energy impact while ensuring the system wide capacity remains unaffected. 
+  # text: We work with Chattanooga Regional Transit Authority and Nashville WeGo to enable efficient transit operations by using artifical intelligence and real-time data analysis at scale. This includes reinforcement learning,  monte-carlo tree search and operations research based optimization methods for system-wide integrated scheduling and dispatch of transit operations. As part of this work we are also developing models to estimate loading factors and real-time energy consumption of mixed vehicle transit fleets and use those models to predict and optimize operations for lowering overall energy impact while ensuring the system wide capacity remains unaffected. 
   active: true
   sequence: 1
 
 - image: /img/energy.png
   captionhead: Energy Consumption Analysis and Prediction
-  text: We are developing models to analyze real-time energy consumption of mixed vehicle transit fleets and use those models to predict and optimize operations for lowering overall energy impact while ensuring the system wide capacity remains unaffected. 
+  text: Energy dashboard for analyzing energy consumption of the fleet. 
   active: false
-  sequence: 2
+  sequence: 4
 
 
 - image: /img/dataflow_revised.png
   captionhead: Backgroud Operations
-  text: Background Test is here
+  text: Integrated systems concept.
   active: false
-  sequence: 3
+  sequence: 2
 
 
 - image: /img/aiengine2.png
   captionhead: Backgroud Operations
-  text: Background Test is here
+  text: Overview of AI Engine for optimization of integrated transit services.
+  active: false
+  sequence: 3
+
+- image: /img/solution_space_final.png
+  captionhead: Backgroud Operations
+  text: Overview of the solution space of operational optimization for integrated transit services.
   active: false
   sequence: 4
+
 
 
 
