--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,6 +17,9 @@
 - title: "Publications"
   url: /publications/
 
+- title: "Talks"
+  url: /talks/
+
 - title: "CARTA Energy Dashboard"
   url: /energydashboard/
 
