--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -1,3 +1,9 @@
+
+- text: Our paper [**Decision Support Framework for Grid-Aware Electric Bus Charge Scheduling**](/files/pettetisgt2020.pdf) was accepted for the Innovative Smart Grid Technologies Conference (ISGT) 2020. 
+  active: true
+  date: Dec 2020
+  sequence: 6
+
 - text: A [**review report**](files/HDEMMA_2020_Report.pdf) on the [**HD-EMMA project**](/energy) is now available.
 
 - text: Prof. Laszka presented [**Optimizing the Energy Usage of EV's and ICEV's in Public Transportation**](https://youtu.be/HbfQWZUWTGQ) at the UH Energy Electric Vehicle Webinar Series on November 19th, 2020. The talk summarizes key results from our [HD-EMMA project](/energy).
